--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Gulp Boilerplate</title>
-	<link rel="stylesheet" type="text/css" href="dist/css/main.min.css">
+	<link rel="stylesheet" type="text/css" href="statics/style.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="dist/favicon.png">
 </head>
 <body>
   <h1>Gulp</h1>
-  <script src="dist/js/bundle.js"></script>
+  <script src="statics/script.min.js"></script>
 </body>
 </html>
